# ds-project-public

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.in  LICENSE  README.md  build.sh
demo/: config-1.yaml  config-2.yaml  config-3.yaml
proto/: lseqDb.proto
src/: main.cpp
src/db/: comparator.hpp  dbConnector.cpp  dbConnector.hpp  fullKey.hpp
src/proto/: lseqDb.proto
src/proto-src/: lseqDb.grpc.pb.cc  lseqDb.grpc.pb.h  lseqDb.pb.cc  lseqDb.pb.h
src/server/: grpc-server.cpp  grpc-server.h
src/utils/: configVars.hpp  grpcConfig.hpp  yamlConfig.cpp  yamlConfig.hpp
tests/configTests/: configTest.cpp
tests/dbTests/: baseDbTest.cpp  fullKeyTest.cpp  groupOperationTest.cpp  restartDbTest.cpp
tests/resources/: config.yaml
